--- a/2023/2302.ipynb
+++ b/2023/2302.ipynb
@@ -15,21 +15,29 @@
     "\n",
     "To solve: look at each game XX and see if it has fewer than the number of possible cubes\n",
     "\n",
-    "read line\n",
-    "split at colon (get game N)\n",
-    "split game data at semicolons (get sample)\n",
-    "split samples at comma - get color data\n"
+    "1. read line\n",
+    "1. split at colon (get game N)\n",
+    "1. split game data at semicolons (get sample)\n",
+    "1. split samples at comma - get color data & cube N data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Game 1  3 blue, 4 red; 1 red, 2 green, 6 blue; 2 green\n"
+     ]
+    }
+   ],
    "source": [
     "line = 'Game 1: 3 blue, 4 red; 1 red, 2 green, 6 blue; 2 green'\n",
-    "head,divider,tail = line.partition(':')\n",
-    "\n"
+    "head,_,tail = line.partition(':')\n",
+    "print(head,tail)\n"
    ]
   },
   {
@@ -147,7 +155,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OK, I've got each of the bits sorted. Let's put it together. . . "
+    "OK, I've got each of the bits sorted. Let's put it together. . . \n",
+    "\n",
+    "I will createa a function for the test sample: as soon as one of the values > maxValues, it will return false -- that way we can stop testing as soon as the sample is unviable."
    ]
   },
   {
@@ -186,7 +196,7 @@
     "tally = 0\n",
     "\n",
     "for line in testData.split('\\n'):\n",
-    "    head,divider,tail = line.partition(':')\n",
+    "    head,_,tail = line.partition(':')\n",
     "    gameNum = re.search(findNumbers,head)[0]\n",
     "    samples = tail.split(';')\n",
     "    if testSample(tail):\n",
@@ -207,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +251,7 @@
     "tally = 0\n",
     "\n",
     "for line in data:\n",
-    "    head,divider,tail = line.partition(':')\n",
+    "    head,_,tail = line.partition(':')\n",
     "    gameNum = re.search(findNumbers,head)[0]\n",
     "    samples = tail.split(';')\n",
     "    if testSample(tail):\n",
@@ -313,7 +323,7 @@
     "tally = 0\n",
     "\n",
     "for line in testData.split('\\n'):\n",
-    "    head,divider,tail = line.partition(':')\n",
+    "    head,_,tail = line.partition(':')\n",
     "    gameNum = re.search(findNumbers,head)[0]\n",
     "    samples = tail.split(';')\n",
     "    tally += testSample(tail)\n",
@@ -366,7 +376,7 @@
     "tally = 0\n",
     "\n",
     "for line in data:\n",
-    "    head,divider,tail = line.partition(':')\n",
+    "    head,_,tail = line.partition(':')\n",
     "    gameNum = re.search(findNumbers,head)[0]\n",
     "    samples = tail.split(';')\n",
     "    tally += testSample(tail)\n",
