--- a/2023/2305.ipynb
+++ b/2023/2305.ipynb
@@ -124,6 +124,8 @@
    "source": [
     "OK, I can't figure out a way to do this with the dictionaries as I had hoped to. So let's try something else.\n",
     "\n",
+    "I've looked at some solutions on Reddit. Found [this one](https://github.com/torbensky/advent-of-code-2023/blob/main/day05/solution.py) useful for reading in the data. Won't look at the rest of the code (yet).\n",
+    "\n",
     "1. Get seed data\n",
     "1. Break the data into clumps by splitting on \\n\\n (since there's a blank line b/t groups of data)\n",
     "1. read each clump into a \"map\" list of tuples [(target, source, range),(target,source,range)...]\n",
@@ -346,6 +348,15 @@
    ],
    "source": [
     "mappers['seed'][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OK, that works, but it's more complex than I need. Since I'm applying the maps in sequence, I don't need to know their names -- I'm just going to apply them 1->2->3->...\n",
+    "\n",
+    "So let's just make a list of the various maps."
    ]
   },
   {
