--- a/2023/2306.ipynb
+++ b/2023/2306.ipynb
@@ -23,7 +23,7 @@
     "The product of the winning numbers is the answer.\n",
     "\n",
     "Solution:\n",
-    "1. read the input. I think I can do the .partition function and .split() to generate a list of numbers.\n",
+    "1. read the input. I think I can do the `.partition()` function and `.split()` to generate a list of numbers.\n",
     "1. Zip the two lists together to get the time/distance for each race.\n",
     "1. For each race, run the equation above and find the number of possible wins."
    ]
@@ -88,7 +88,7 @@
     "    nWins = 0\n",
     "    tTot = race[0] # time\n",
     "    goal = race[1] # dist\n",
-    "    for tPush in range(tTot):\n",
+    "    for tPush in range(tTot): # try all time values\n",
     "        if tTot * tPush - tPush**2 > goal:\n",
     "            nWins += 1\n",
     "    print(race,nWins)\n",
