Day 7 finished (finally)

--- a/2023/2306.ipynb
+++ b/2023/2306.ipynb
@@ -212,6 +212,49 @@
     "    product *= nWins\n",
     "print(product)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Several [folks](https://github.com/MeisterLLD/aoc2023/blob/main/6.py) on Reddit noted that this can be solved with the quadratic formula. It will show the two points on the parabola where the values cross the x-axis: numbers between those are possible solutions to the problem.\n",
+    "\n",
+    "```\n",
+    "t=time\n",
+    "d = distance (to exceed)\n",
+    "(-b +/- (b^2 - 4ac)**.5) /2a\n",
+    "```\n",
+    "\n",
+    "$delta = t^2 - 4*d$\n",
+    "\n",
+    "$(t + sqrt(delta)) /2 -1)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42588603"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import sqrt, floor, ceil\n",
+    "\n",
+    "def numbers(time, record):\n",
+    "    Delta = time**2 - 4*record\n",
+    "    return  ceil( (time + sqrt(Delta))/2 - 1  ) - floor( (time - sqrt(Delta))/2  + 1 ) + 1\n",
+    "\n",
+    "numbers(60947882,475213810151650)"
+   ]
   }
  ],
  "metadata": {
