--- a/2023/2307.ipynb
+++ b/2023/2307.ipynb
@@ -424,14 +424,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "251824095\n"
+      "251,824,095, 251824095\n"
      ]
     }
    ],
@@ -449,8 +449,8 @@
     "def evaluate_hand(card_list):\n",
     "    ones = card_list.count(1) # how many 1s are in hand? (0 to 5)\n",
     "    high_card_dict = {0:1,1:2,2:4,3:6,4:7,5:7}\n",
-    "    three_kind_dict = {0:0,1:2,2:3}\n",
-    "    pair_dict = {0:0,1:2,2:4,3:5}\n",
+    "    three_kind_dict = {0:4,1:6,2:7}\n",
+    "    pair_dict = {0:2,1:4,2:6,3:7}\n",
     "\n",
     "    card_set = set(card_list) # create my set of card values, but get rid of 1s (Jokers)\n",
     "    card_set.discard(1)\n",
@@ -460,9 +460,9 @@
     "    if 5 in total: return 7 # five of a kind\n",
     "    elif (3 in total) and (2 in total): return 5 # 5 cards accounted for, no Js\n",
     "    elif 4 in total: return 6 + ones # four of a kind = 6, five of a kind = 7\n",
-    "    elif 3 in total: return 4 + three_kind_dict[ones] # 3 of a kind = 4; 4 of a kind = 6; 5 of a kind = 7\n",
+    "    elif 3 in total: return three_kind_dict[ones] # 3 of a kind = 4; 4 of a kind = 6; 5 of a kind = 7\n",
     "    elif len([i for i in total if i == 2]) == 2: return 3 + ones*2 # two pair = 2; full house = 5\n",
-    "    elif 2 in total: return 2 + pair_dict[ones] # pair = 2; 3kind = +2; 3kind +4; 5 kind+5\n",
+    "    elif 2 in total: return pair_dict[ones] # pair = 2; 3kind = +2; 3kind +4; 5 kind+5\n",
     "    else: return high_card_dict[ones] # high = 1; pair = 2; 3kind = 4; 4kind = 6; 5kind = 7  \n",
     "\n",
     "with open ('2307input.txt') as f_in:\n",
@@ -487,7 +487,7 @@
     "    #print(f\"{i+1}, {finalList[i]}\")\n",
     "    tally += (i+1) * finalList[i][1]\n",
     "\n",
-    "print(tally)\n"
+    "print(f\"{tally:,}, {tally}\")\n"
    ]
   },
   {
