Working on Day 10

--- a/2023/2301.ipynb
+++ b/2023/2301.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
    ],
    "source": [
     "# OK, all that works; let's run it on the actual data\n",
-    "input = '/home/alp/Google Drive/Python/AdventCode/2023/2301input.txt'\n",
+    "input = '2301input.txt'\n",
     "\n",
     "with open (input) as f_in:\n",
     "    data = f_in.read().split('\\n')\n",
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
