--- a/2023/2309.ipynb
+++ b/2023/2309.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "[[0, 3, 6, 9, 12, 15], [1, 3, 6, 10, 15, 21], [10, 13, 16, 21, 30, 45]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,36 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (2662722400.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_228923/2662722400.py\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    next_val = find_next_val(\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def find_diffs(sequence): # input list of values; returns list of differences in values\n",
     "    diffs = []\n",
     "    for i in range(len(sequence)-1):\n",
     "        diffs.append(sequence[i+1] - sequence[i])\n",
-    "    return diffs\n",
-    "\n",
-    "next_value = 0\n",
-    "for sequence in data:\n",
-    "    next_row = find_diffs(sequence)\n",
-    "    list_of_sequences.append(next_row)\n",
-    "    if sum(next_row) == 0:\n",
-    "        next_val = find_next_val(\n"
+    "    return diffs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thinking about the problem a bit more, I don't need to save all the different lists that are produced (as the assignment suggests). Rather, I just need to add the final element of each list to the final element of the current list. This is much easier!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -198,22 +189,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1,877,825,182,  1877825182\n"
+      "[0, 3, 6, 9, 12, 15] 15\n",
+      "[3, 3, 3, 3, 3] 18\n",
+      "[0, 0, 0, 0] 18\n",
+      "[1, 3, 6, 10, 15, 21] 21\n",
+      "[2, 3, 4, 5, 6] 27\n",
+      "[1, 1, 1, 1] 28\n",
+      "[0, 0, 0] 28\n",
+      "[10, 13, 16, 21, 30, 45] 45\n",
+      "[3, 3, 5, 9, 15] 60\n",
+      "[0, 2, 4, 6] 66\n",
+      "[2, 2, 2] 68\n",
+      "[0, 0] 68\n",
+      "114,  114\n"
      ]
     }
    ],
    "source": [
-    "with open ('2309input.txt') as f_in:\n",
-    "    data = [line for line in f_in.read().split('\\n')]\n",
+    "#with open ('2309input.txt') as f_in:\n",
+    "#    data = [line for line in f_in.read().split('\\n')]\n",
     "\n",
-    "#data = [line for line in test_data.split('\\n')]\n",
+    "data = [line for line in test_data.split('\\n')]\n",
     "data = [list(map(int, x.split())) for x in data]\n",
     "\n",
     "data\n",
@@ -226,15 +229,15 @@
     "\n",
     "tally = 0\n",
     "for curr_seq in data:\n",
-    "    last_val = 10**10\n",
-    "    next_val = curr_seq[-1]\n",
-    "    #print(curr_seq)\n",
+    "    #last_val = 10**10     \n",
+    "    next_val = curr_seq[-1] # last value in the current list of numbers\n",
+    "    print(curr_seq, next_val)\n",
     "    while sum(curr_seq) != 0:\n",
     "        diffs = find_diffs(curr_seq) # find the last val in the list of differences\n",
-    "        last_val = diffs[-1]\n",
-    "        next_val += last_val\n",
+    "        #last_val = diffs[-1]\n",
+    "        next_val += diffs[-1]\n",
     "        curr_seq = diffs\n",
-    "    #print(f\"next element = {next_val}\")\n",
+    "        print(curr_seq, next_val)\n",
     "    tally += next_val\n",
     "\n",
     "print(f\"{tally:,},  {tally}\")\n"
@@ -251,41 +254,60 @@
     "`last_val > 0` to `last_val != 0`\n",
     "* 1,877,825,200 is still too high\n",
     "\n",
-    "Run #3 - change the test to: `while sum(curr_seq) != 0`\n",
-    "* 1,877,825,182 is too *low*\n"
+    "Run #3 - since the criteria is `all numbers in list = 0`, change the test to: `while sum(curr_seq) != 0`\n",
+    "* 1,877,825,182 is too *low*\n",
+    "\n",
+    "Perhaps I'm missing a `1` somewhere? I tried entering ...183 but that's wrong, too. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14, 21, 42, 87, 173, 334, 631, 1162, 2072, 3563, 5904, 9441, 14607, 21932, 32053, 45724, 63826, 87377, 117542, 155643, 203169] 1000000 203169\n",
-      "[7, 21, 45, 86, 161, 297, 531, 910, 1491, 2341, 3537, 5166, 7325, 10121, 13671, 18102, 23551, 30165, 38101, 47526] 47526 250695\n",
-      "[14, 24, 41, 75, 136, 234, 379, 581, 850, 1196, 1629, 2159, 2796, 3550, 4431, 5449, 6614, 7936, 9425] 9425 260120\n",
-      "[10, 17, 34, 61, 98, 145, 202, 269, 346, 433, 530, 637, 754, 881, 1018, 1165, 1322, 1489] 1489 261609\n",
-      "[7, 17, 27, 37, 47, 57, 67, 77, 87, 97, 107, 117, 127, 137, 147, 157, 167] 167 261776\n",
-      "[10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10] 10 261786\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] 0 261786\n"
+      "[6, 3, 10, 41, 110, 231, 418, 685, 1046, 1515, 2106, 2833, 3710, 4751, 5970, 7381, 8998, 10835, 12906, 15225, 17806] 1000000 17806\n",
+      "[-3, 7, 31, 69, 121, 187, 267, 361, 469, 591, 727, 877, 1041, 1219, 1411, 1617, 1837, 2071, 2319, 2581] 20387\n",
+      "[10, 24, 38, 52, 66, 80, 94, 108, 122, 136, 150, 164, 178, 192, 206, 220, 234, 248, 262] 20649\n",
+      "[14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14] 20663\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] 20663\n"
      ]
     }
    ],
    "source": [
     "last_val = 10**6\n",
-    "curr_seq = data[3]\n",
+    "curr_seq = data[100]\n",
     "next_val = curr_seq[-1] # get the last value in the curr sequence\n",
     "print(curr_seq,last_val, next_val)\n",
     "\n",
     "while sum(curr_seq) != 0:\n",
     "    diffs = find_diffs(curr_seq) # find the last val in the list of differences\n",
-    "    last_val = diffs[-1]\n",
-    "    next_val += last_val\n",
+    "    next_val += diffs[-1]\n",
     "    curr_seq = diffs\n",
-    "    print(curr_seq,last_val, next_val)"
+    "    print(curr_seq, next_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
    ]
   }
  ],
@@ -305,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
