--- a/2023/2309.ipynb
+++ b/2023/2309.ipynb
@@ -189,34 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 3, 6, 9, 12, 15] 15\n",
-      "[3, 3, 3, 3, 3] 18\n",
-      "[0, 0, 0, 0] 18\n",
-      "[1, 3, 6, 10, 15, 21] 21\n",
-      "[2, 3, 4, 5, 6] 27\n",
-      "[1, 1, 1, 1] 28\n",
-      "[0, 0, 0] 28\n",
-      "[10, 13, 16, 21, 30, 45] 45\n",
-      "[3, 3, 5, 9, 15] 60\n",
-      "[0, 2, 4, 6] 66\n",
-      "[2, 2, 2] 68\n",
-      "[0, 0] 68\n",
-      "114,  114\n"
+      "1,877,825,184,  1877825184\n"
      ]
     }
    ],
    "source": [
-    "#with open ('2309input.txt') as f_in:\n",
-    "#    data = [line for line in f_in.read().split('\\n')]\n",
+    "with open ('2309input.txt') as f_in:\n",
+    "    data = [line for line in f_in.read().split('\\n')]\n",
     "\n",
-    "data = [line for line in test_data.split('\\n')]\n",
+    "#data = [line for line in test_data.split('\\n')]\n",
     "data = [list(map(int, x.split())) for x in data]\n",
     "\n",
     "data\n",
@@ -231,13 +219,13 @@
     "for curr_seq in data:\n",
     "    #last_val = 10**10     \n",
     "    next_val = curr_seq[-1] # last value in the current list of numbers\n",
-    "    print(curr_seq, next_val)\n",
-    "    while sum(curr_seq) != 0:\n",
+    "    #print(curr_seq, next_val)\n",
+    "    while set(curr_seq) != {0}:\n",
     "        diffs = find_diffs(curr_seq) # find the last val in the list of differences\n",
     "        #last_val = diffs[-1]\n",
     "        next_val += diffs[-1]\n",
     "        curr_seq = diffs\n",
-    "        print(curr_seq, next_val)\n",
+    "     #   print(curr_seq, next_val)\n",
     "    tally += next_val\n",
     "\n",
     "print(f\"{tally:,},  {tally}\")\n"
@@ -257,57 +245,64 @@
     "Run #3 - since the criteria is `all numbers in list = 0`, change the test to: `while sum(curr_seq) != 0`\n",
     "* 1,877,825,182 is too *low*\n",
     "\n",
-    "Perhaps I'm missing a `1` somewhere? I tried entering ...183 but that's wrong, too. \n"
+    "Run #4 - `sum(curr_seq)` isn't the right test: `sum([-1,1,0,0]) = 1`. So change test to `set(curr_seq) != {0}`. This generated teh correct result: $1,877,825,184$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Part 2: Same process but with the first value in the sequence. Given the way I've set this up, this should be quick and easy. . . "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 3, 10, 41, 110, 231, 418, 685, 1046, 1515, 2106, 2833, 3710, 4751, 5970, 7381, 8998, 10835, 12906, 15225, 17806] 1000000 17806\n",
-      "[-3, 7, 31, 69, 121, 187, 267, 361, 469, 591, 727, 877, 1041, 1219, 1411, 1617, 1837, 2071, 2319, 2581] 20387\n",
-      "[10, 24, 38, 52, 66, 80, 94, 108, 122, 136, 150, 164, 178, 192, 206, 220, 234, 248, 262] 20649\n",
-      "[14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14] 20663\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] 20663\n"
+      "1,108,  1108\n"
      ]
     }
    ],
    "source": [
-    "last_val = 10**6\n",
-    "curr_seq = data[100]\n",
-    "next_val = curr_seq[-1] # get the last value in the curr sequence\n",
-    "print(curr_seq,last_val, next_val)\n",
+    "with open ('2309input.txt') as f_in:\n",
+    "    data = [line for line in f_in.read().split('\\n')]\n",
     "\n",
-    "while sum(curr_seq) != 0:\n",
-    "    diffs = find_diffs(curr_seq) # find the last val in the list of differences\n",
-    "    next_val += diffs[-1]\n",
-    "    curr_seq = diffs\n",
-    "    print(curr_seq, next_val)"
+    "#data = [line for line in test_data.split('\\n')]\n",
+    "data = [list(map(int, x.split())) for x in data]\n",
+    "\n",
+    "data\n",
+    "\n",
+    "def find_diffs(sequence): # input list of values; returns list of differences in values\n",
+    "    diffs = []\n",
+    "    for i in range(len(sequence)-1):\n",
+    "        diffs.append(sequence[i] - sequence[i+1])\n",
+    "    return diffs\n",
+    "\n",
+    "tally = 0\n",
+    "for curr_seq in data:   \n",
+    "    next_val = curr_seq[0] # first value in the current list of numbers\n",
+    "    #print(next_val, curr_seq)\n",
+    "    while set(curr_seq) != {0}:\n",
+    "        diffs = find_diffs(curr_seq) # find the last val in the list of differences\n",
+    "        curr_seq = diffs\n",
+    "        next_val += diffs[0]   \n",
+    "    #    print(next_val, curr_seq)\n",
+    "    tally += next_val \n",
+    "\n",
+    "print(f\"{tally:,},  {tally}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(data)"
+    "Got it correct on the first production run. Boom!\n"
    ]
   }
  ],
