Day 10 pt1 done

--- a/2023/2309.ipynb
+++ b/2023/2309.ipynb
@@ -236,14 +236,14 @@
    "metadata": {},
    "source": [
     "Run #1:\n",
-    "* 1,879,448,560 is too high a value.\n",
+    "* $1,879,448,560$ is too high a value.\n",
     "\n",
     "Run #2 - change the test from\n",
     "`last_val > 0` to `last_val != 0`\n",
-    "* 1,877,825,200 is still too high\n",
+    "* $1,877,825,200$ is still too high\n",
     "\n",
     "Run #3 - since the criteria is `all numbers in list = 0`, change the test to: `while sum(curr_seq) != 0`\n",
-    "* 1,877,825,182 is too *low*\n",
+    "* $1,877,825,182$ is too *low*\n",
     "\n",
     "Run #4 - `sum(curr_seq)` isn't the right test: `sum([-1,1,0,0]) = 1`. So change test to `set(curr_seq) != {0}`. This generated teh correct result: $1,877,825,184$.\n",
     "\n"
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
